feat: added thumbnail resize
